--- a/SalesWebMvc/Views/Home/Index.cshtml
+++ b/SalesWebMvc/Views/Home/Index.cshtml
@@ -6,3 +6,9 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<h3>@ViewData["Message"]</h3>
+
+<p>Aluno: @ViewData["Aluno"]</p>
+
+<p>Professor:  @ViewData["Professor"]</p>
