SellerService and Basic FindAll

--- a/SalesWebMvc/Views/Sellers/index.cshtml
+++ b/SalesWebMvc/Views/Sellers/index.cshtml
@@ -1,7 +1,51 @@
-﻿
+﻿@model IEnumerable<SalesWebMvc.Models.Seller>
 @{
-    ViewData["Title"] = "index";
+    ViewData["Title"] = "Seller";
 }
 
-<h1>index</h1>
+<h1>@ViewData["Title"]</h1>
+<table class="table table-striped table-hover">
+ <thead>
+    <tr class="table-success">
+        <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Email)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.BirthDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.BaseSalary)
+        </th>
+        <th>
 
+        </th>
+    </tr>
+    <tbody>
+        @foreach(var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                 <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                     <td>
+                    @Html.DisplayFor(modelItem => item.BirthDate)
+                    </td>
+                         <td>
+                    @Html.DisplayFor(modelItem => item.BaseSalary)
+                    </td>
+                    <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Details</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+ </thead>
+ </table>
