--- a/SalesWebMvc/Views/Sellers/index.cshtml
+++ b/SalesWebMvc/Views/Sellers/index.cshtml
@@ -4,6 +4,8 @@
 }
 
 <h1>@ViewData["Title"]</h1>
+<p ><a asp-action="Create" class="btn btn-secondary">Create New</a></p>
+
 <table class="table table-striped table-hover">
  <thead>
     <tr class="table-success">
