Update seller and custom service exception

--- a/SalesWebMvc/Views/Sellers/Delete.cshtml
+++ b/SalesWebMvc/Views/Sellers/Delete.cshtml
@@ -10,7 +10,7 @@
 <div>
     <h4>Seller </h4>
     <hr />
-    <dl class="list-group-horizontal-md">
+    <dl class="row">
         <dt>
             @Html.DisplayNameFor(model => model.Name);
         </dt>
