--- a/SalesWebMvc/Views/Sellers/Create.cshtml
+++ b/SalesWebMvc/Views/Sellers/Create.cshtml
@@ -10,25 +10,26 @@
 <div class="row-cols-4">
     <div class="col-md-4"></div>
     <form asp-action="Create">
+        <div asp-validation-summary="All" class="text-danger"></div> 
         <div class="form-group">
             <label asp-for="Seller.Name" class="col-form-label"></label>
             <input asp-for="Seller.Name" class="form-control" />
-           
+            <span asp-validation-for="Seller.Name" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Seller.Email" class="col-form-label"></label>
             <input asp-for="Seller.Email" class="form-control" />
-          
+            <span asp-validation-for="Seller.Email" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Seller.BirthDate" class="col-form-label"></label>
-            <input asp-for="Seller.BirthDate" class="form-c ontrol"/>
-           
+            <input asp-for="Seller.BirthDate" class="form-control"/>
+            <span asp-validation-for="Seller.BirthDate" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Seller.BaseSalary" class="col-form-label"></label>
             <input asp-for="Seller.BaseSalary" class="form-control" />
-            
+            <span asp-validation-for="Seller.BaseSalary" class="text-danger"></span>
         </div>
         <div class="form-group">
         <label asp-for="Seller.DepartmentId" class="col-form-label"></label>    
@@ -41,3 +42,6 @@
   
     
 </div>
+@section Scripts{
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
